# smart-trade

./: .env.example  .gitignore  AGENTS.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  strategy_catalog.py
backend/app/adapters/api/: routes.py  schemas.py
backend/app/adapters/market_data/: ccxt_market_data_provider.py  ccxt_sentiment_data_provider.py
backend/app/adapters/ml/: pipeline.py  xgboost_training_adapter.py
backend/app/adapters/persistence/: models.py  (+1 more)
backend/app/domain/: __init__.py  entities.py  enums.py  exceptions.py
backend/app/infrastructure/: clock.py  config.py  container.py  database.py
backend/app/workers/: training_worker.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260614_0001_b1_core_schema.py  20260614_0002_b3_market_data_features.py  20260614_0003_b5_model_training.py  20260614_0004_b7_live_readiness.py
backend/smart_trade/: __init__.py  strategy_catalog.py
backend/smart_trade/adapters/: __init__.py
backend/smart_trade/application/: __init__.py
backend/smart_trade/domain/: entities.py  training_window.py
backend/smart_trade/infrastructure/: __init__.py  config.py  container.py  database.py
backend/smart_trade_api/: main.py
backend/smart_trade_training_worker/: main.py
backend/src/smart_trade_backend/: __init__.py  config.py  db.py  main.py  migrations.py
backend/tests/: test_backend_flow.py  test_health.py  test_live_execution.py  test_live_readiness.py  test_market_data.py  test_model_training.py  test_paper_runtime.py  test_real_dataset_builder.py  test_sentiment_provider.py  test_strategy_registry.py  test_validation_strategy_backtest.py  test_xgboost_training_adapter.py
(+140 files in other folders)
