[project]
name = "smart-trade-backend"
version = "0.1.0"
description = "Native Python backend skeleton for the Smart Trade MVP."
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.17.0",
    "cryptography>=46.0.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_trade_backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]
training = [
    "joblib>=1.5.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "ta-lib>=0.6.8",
    "xgboost>=3.1.0",
]
exchange = [
    "ccxt>=4.5.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
