[project]
name = "smart-trade-backend"
version = "0.1.0"
description = "Smart Trade backend MVP for XGBoost training pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "ccxt>=4.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["var*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
